<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>SpringRest</groupId>
  <artifactId>SpringRest</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
  	<cucumber.version>1.2.0</cucumber.version>
	<junit.version>4.11</junit.version>
	<selenium.version>2.40.0</selenium.version>
	<start-class>library.App</start-class>
  </properties>
  
  <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.1.9.RELEASE</version>
  </parent>

  <dependencies>
      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
      </dependency>
     
        
      <dependency>
        <groupId>org.springframework.data</groupId>
        <artifactId>spring-data-mongodb</artifactId> 
      </dependency>
      
      <dependency>
	      <groupId>org.projectlombok</groupId>
	      <artifactId>lombok</artifactId>
	      <version>1.14.4</version>
      </dependency>
      
      <dependency>
	    <groupId>net.sf.dozer</groupId>
	    <artifactId>dozer</artifactId>
	    <version>5.4.0</version>
	    <exclusions>
		  <exclusion> 
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-log4j12</artifactId>
		  </exclusion>
		  <exclusion> 
		    <groupId>log4j</groupId>
		    <artifactId>log4j-over-slf4j</artifactId>
		  </exclusion>
		</exclusions>
	</dependency>
	
	<dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
     </dependency>
     <dependency>
	   <groupId>junit</groupId>
	   <artifactId>junit</artifactId>
	   <scope>test</scope>
     </dependency>
     <dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-spring</artifactId>
		<version>${cucumber.version}</version>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<scope>test</scope>
	</dependency>
	<dependency>
		<groupId>org.seleniumhq.selenium</groupId>
		<artifactId>selenium-server</artifactId>
		<version>${selenium.version}</version>
	</dependency>
  </dependencies>

  <build>
  	 <directory>target</directory>
     <outputDirectory>target/classes</outputDirectory>
      <plugins>
      	<plugin>
      	    <groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-compiler-plugin</artifactId>			
			<configuration>
				<source>1.8</source>
				<target>1.8</target>
				<compilerArguments>
		            <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
		            <processor>lombok.core.AnnotationProcessor</processor>
		        </compilerArguments>
			</configuration>
		</plugin>
        <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
        <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-surefire-plugin</artifactId>
			<configuration>
				<argLine>-Duser.language=en</argLine>
				<argLine>-Xmx1024m</argLine>
				<argLine>-XX:MaxPermSize=256m</argLine>
				<argLine>-Dfile.encoding=UTF-8</argLine>
				<useFile>false</useFile>
			</configuration>
		</plugin>
      </plugins>
  </build>

  <repositories>
      <repository>
          <id>spring-releases</id>
          <url>https://repo.spring.io/libs-release</url>
      </repository>
      
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>http://repo.spring.io/libs-milestone</url>
        </repository>
    
  </repositories>
  <pluginRepositories>
      <pluginRepository>
          <id>spring-releases</id>
          <url>https://repo.spring.io/libs-release</url>
      </pluginRepository>
      <pluginRepository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>http://repo.spring.io/libs-milestone</url>
        </pluginRepository>
  </pluginRepositories>
</project>
